# fishsuite

./: .gitignore  POSTRUN_UTILITIES.md  README.md  THRESHOLD_INTENSITY_FEATURE.md  file_map.md  fishsuite.bat  pyproject.toml
assets/: make_icon.py
docs/: END_TO_END_RESULTS.md  IMPLEMENTATION_LOG.md  PARITY_REPORT.md  PHASE0_STATUS.md  bioio_smoke.py  fiji_vs_fishsuite_audit.md
scripts/: regen_walkthrough_threshold_floor.py
src/fishsuite/: __init__.py  cli.py  runner.py
src/fishsuite/config/: __init__.py  schema.py
src/fishsuite/config/presets/: bin1_d8cmyo_100x.yaml  generic_100x_0p065.yaml  (+44 more)
src/fishsuite/core/: __init__.py  _superplot.py  coloc_backfill.py  excel_report.py  image_preprocess.py  io.py  metrics.py  morphology.py  nucleolus.py  output.py  parallel.py  pixel_pattern.py  qc.py  repro.py  segmentation.py  singlecell.py  spots.py  thresholds.py  walkthrough_figure.py
src/fishsuite/gui/: __init__.py  __main__.py  main.py  readiness.py  runner_proc.py  state.py  widgets.py
tests/: test_autofocus_channel.py  test_autofocus_zlock.py  test_cli_if_pub_images.py  test_cli_postrun.py  test_cli_singlecell_pixelpattern.py  test_coloc_backfill.py  test_costes_threshold_wiring.py  test_focus_window_fixed_n.py  test_footprint_association.py  test_nucleolus_perf_equiv.py  test_output.py  test_partner_intensity_perf.py  test_partner_null_coloc.py  test_partner_radial_profile.py  test_partner_rotation_null.py  test_qc_flags.py  test_qc_overdetect.py  test_repro.py  test_rna_protein_depth.py  test_smoke.py  test_threshold_intensity.py  test_walkthrough_figure.py
(+10 files in other folders)
