[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "fishsuite"
version = "0.1.0"
description = "Standalone Python pipeline for RNA-FISH / IF quantification & colocalization (Fiji-free)"
readme = "README.md"
requires-python = ">=3.10"
license = { text = "MIT" }
authors = [
    { name = "Brian (MD-PhD, UTMB BMB)", email = "gsdewson@utmb.edu" },
]
keywords = ["microscopy", "FISH", "colocalization", "stardist", "cellpose", "bigfish"]

dependencies = [
    "numpy>=1.24,<2.0",
    "scipy>=1.10",
    "scikit-image>=0.22",
    "tifffile>=2024.1",
    "stardist>=0.9",
    "cellpose>=3.0",
    "big-fish>=0.6",
    "bioio>=3.0",
    "bioio-bioformats>=2.0",
    "pydantic>=2.5",
    "click>=8.1",
    "rich>=13.0",
    "psutil>=5.9",
    "pyyaml>=6.0",
    "openpyxl>=3.1",
    "pandas>=2.0",
    "matplotlib>=3.7",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "hypothesis>=6.0",
]
gui = [
    "PySide6>=6.6",
]

[project.scripts]
fishsuite = "fishsuite.cli:cli"

[tool.hatch.build.targets.wheel]
packages = ["src/fishsuite"]
